--- a/style2.css
+++ b/style2.css
@@ -9,7 +9,7 @@
 {
     height: 100%;
 	width: 100%;
-	background:rgba(0,0,0,0.4) url('../image/bg2.jpg');
+	background:rgba(0,0,0,0.4) url('bg2.jpg');
     background-position: center;
 	background-size: cover;
 	position: absolute;
